@startuml
skinparam classAttributeIconSize 0
left to right direction

package resources{
    class login_fxml
    class RegisteringAfFrivilig_fxml
    package frivilig{
        class FriviligMineInformationer_fxml
        package popop1_1 {
            class FriviligSkiftPasswordPopop_fxml
        }
    }
    package ansvarlig {
        class AnsvarligMineInformationer_fxml
        package popop2_2{
            class SkiftPasswordPopop_fxml
        }
    }
}

package Controller{
    class LoginController
    class RegisteringAfFriviligController
    package Frivilig{
        class FriviligMineInformationerController
        package popop1{
            class FriviligFskiftPasswordPopopControler
        }
    }
    package Ansvarlig{
        class AnsvarligMineInformationerController
        package popop2{
            class skiftPasswordPopopControler
        }
    }
}

package main{
    class Runner
}

package UI {
    class GUI
}

package Data {
    class DatabaseLink
    class Aktivitet
    class Person
    class Regex
    class Vagt
}

Runner --> GUI

UI ..> Data : <<Import>>
Controller ..> Data : <<Import>>

GUI --> resources
resources --> Controller
Controller --> GUI : " -gui"
GUI ..> Controller : "<<use>>"

'GUI --> login_fxml
'login_fxml --> LoginController
'LoginController --> GUI : " -gui"
'GUI ..> LoginController : "<<use>>"

'GUI --> RegisteringAfFrivilig_fxml
'RegisteringAfFrivilig_fxml --> RegisteringAfFriviligController
'RegisteringAfFriviligController --> GUI : " -gui"
'GUI ..> RegisteringAfFriviligController : "<<use>>"

'GUI --> FriviligMineInformationer_fxml
'FriviligMineInformationer_fxml --> FriviligMineInformationerController
'FriviligMineInformationerController --> GUI : " -gui"
'GUI ..> FriviligMineInformationerController : "<<use>>"

'FriviligMineInformationerController --> FriviligSkiftPasswordPopop_fxml
'FriviligSkiftPasswordPopop_fxml --> FriviligFskiftPasswordPopopControler
'FriviligFskiftPasswordPopopControler --> FriviligMineInformationerController : " -FriviligMineInformationerController"
'FriviligMineInformationerController ..> FriviligFskiftPasswordPopopControler : "<<use>>"

'GUI --> AnsvarligMineInformationer_fxml
'AnsvarligMineInformationer_fxml --> AnsvarligMineInformationerController
'AnsvarligMineInformationerController --> GUI : " -gui"
'GUI ..> AnsvarligMineInformationerController : "<<use>>"

'AnsvarligMineInformationerController --> SkiftPasswordPopop_fxml
'SkiftPasswordPopop_fxml --> skiftPasswordPopopControler
'skiftPasswordPopopControler --> AnsvarligMineInformationerController : " -skiftPasswordPopopControler"
'AnsvarligMineInformationerController ..> skiftPasswordPopopControler : "<<use>>"


@enduml